@startuml lsm_02_sstable
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam roundCorner 8
skinparam shadowing false

class SSTable {
  + open(path: fs::path) : SSTable
  + get(key: string_view) : optional<string>
  + get_block(idx: size_t) : Block
  + index() : const IndexBlock&
  + file_size() : size_t
  + file_id() : uint64_t
  + smallest_key() : string_view
  + largest_key() : string_view
  - fd_ : int
  - file_id_ : uint64_t
  - file_size_ : size_t
  - index_ : IndexBlock
  - footer_ : Footer
  - filter_ : optional<BloomFilter>
}

class SSTableBuilder {
  + add(key: string_view, value: string_view) : void
  + finish() : SSTable
  + estimated_size() : size_t
  - flush_block() : void
  - fd_ : int
  - offset_ : uint64_t
  - first_key_ : string
  - last_key_ : string
  - current_block_ : BlockBuilder
  - index_ : IndexBlock
  - filter_ : BloomFilter
}

class Block {
  + get(key: string_view) : optional<string>
  + read_uint32(offset: size_t) : uint32_t
  + size() : size_t
  + data() : const vector<uint8_t>&
  - data_ : vector<uint8_t>
}

class BlockBuilder {
  + add(key: string_view, value: string_view) : void
  + finish() : vector<uint8_t>
  + is_full() : bool
  + current_size() : size_t
  + reset() : void
  - buffer_ : vector<uint8_t>
  - block_size_ : size_t
}

class IndexBlock {
  + add(first_key, last_key, offset, size) : void
  + serialize() : vector<uint8_t>
  + deserialize(data: span<uint8_t>) : IndexBlock
  + entries() : const vector<IndexEntry>&
  - entries_ : vector<IndexEntry>
}

struct IndexEntry {
  + first_key : string
  + last_key : string
  + offset : uint64_t
  + size : uint64_t
}

struct Footer {
  + index_offset : uint64_t
  + filter_offset : uint64_t
  + magic : uint64_t
  + serialize() : vector<uint8_t>
  + deserialize(data) : Footer
}

class BloomFilter {
  + add(key: string_view) : void
  + may_contain(key: string_view) : bool
  + serialize() : vector<uint8_t>
  + deserialize(data: span<uint8_t>) : BloomFilter
  - num_hashes_ : size_t
  - bits_ : vector<uint8_t>
}

class BlockCache {
  + get(file_id: uint64_t, offset: uint64_t) : optional<Block>
  + put(file_id: uint64_t, offset: uint64_t, block: Block) : void
  + capacity() : size_t
  + usage() : size_t
  - lru_ : list<pair<Key, Block>>
  - table_ : unordered_map<Key, iterator, PairHash>
  - capacity_ : size_t
  - usage_ : size_t
  - mutex_ : mutex
}

SSTable *-- IndexBlock
SSTable *-- Footer
SSTable *-- BloomFilter
SSTable ..> Block : reads
SSTableBuilder ..> SSTable : creates
SSTableBuilder *-- BlockBuilder
SSTableBuilder *-- IndexBlock
SSTableBuilder *-- BloomFilter
IndexBlock *-- IndexEntry

note bottom of SSTable
  BlockCache folosit extern,
  injectat de LSMTree (nu de SSTable)
end note

@enduml